[package]
name = "run_container"
version = "0.1.0"
authors = ["Igor Bykov <igorb.dev@websm.io>"]
edition = "2018"

[dependencies]
libjail = { git = "https://github.com/kolgotko/libjail" }
libmount = { git = "https://github.com/kolgotko/libmount" }
command_pattern = { git = "https://github.com/kolgotko/command-pattern.rs" }
forkpty = { git = "https://github.com/kolgotko/forkpty" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = "*"
nix = "*"
lazy_static = "*"
signal-hook = "*"
jsonrpc-core = "*"
path-absolutize = "*"
libc = "*"
uuid = { version = "*", features = ["v4", "v5"] }

